HTML and SCSS corrections

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="section-heading contact__header">Kontakt</h2>
                     <hr class="my-4">
-                    <p class="mb-5 contact__paragraph">Jeżeli jesteś zainteresowany współpracą lub masz jakieś pytania dotyczące oferowanych przez nas usług - odezwij się drogą telefoniczą lub mailową </p>
+                    <p class="mb-5 contact__paragraph">Jeżeli jesteś zainteresowany współpracą lub masz jakieś pytania dotyczące oferowanych przez nas usług - odezwij się drogą telefoniczną lub mailową </p>
                 </div>
             </div>
             <div class="row">
